# ChangeLog of Nadoka($Rev$)
# $Id$ 
#

2004-08-14(Sat) 21:24:28 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/modemanager.nb : fix mode check routine(match -> include?)


2004-08-13(Fri) 11:04:36 +0900  Koichi Sasada  <ko1@atdot.net>

	* 0.6.3 released

	* ndk_version.rb : 0.6.4


2004-08-13(Fri) 10:18:03 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/modemanager.nb : fix bug

	* plugins/autodump.nb : added

	* plugins/*.nb : fix hash access([] to fetch(key, default)).


2004-08-13(Fri) 10:04:26 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_state.rb : fix enbug

	* nadokarc : change default channel and fix typo

	* plugins/drbot.nb : fix configuration example's bug

	* plugins/sixamo.nb : fix typo


2004-08-05(Thu) 08:25:48 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_state.rb : fix some bugs


2004-08-02(Mon) 07:51:51 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_client.rb : fix pong message field

	* ndk_state.rb : fix on_quit process

	* plugins/modemanager.nb : don't set mode if already set


2004-07-28(Wed) 05:07:00 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/google.nb : support gooo*gle


2004-07-27(Tue) 11:16:05 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/ndk_client.rb : fix typo


2004-07-26(Mon) 02:13:58 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/backlogbot.nb : fixed a bug

	* plugins/modemanager.nb : applied unak's patch
	(support delaied distribution, and so on)

	* ndk_client.rb : fix exception handling


2004-07-24(Sat) 21:26:30 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/modemanager.nb : added


2004-07-24(Sat) 07:30:10 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : fix server login process(reconnect
	if server replies error)

	* ndk_manager.rb, ndk_state.rb : support 'KICK' state

	* ndk_manager.rb, ndk_staet.rb : support safe channel

	* plugins/backlogbot.nb : fix around safe channel bugs

	* plugins/googlebot.nb(googlec) : fix charcode problem

